--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@preact/preset-vite": "^2.6.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=21.0.0"
   }
 }
